correções de bugs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          
             <p>
                 <h2>Ano de nascimento</h2>
-                <div class="inputTxt"><label for="inputTxt">Data:</label><input type="text" name="inputTxt" id="fAno" min="0"></div>
+                <div class="inputTxt"><label for="inputTxt">Ano :</label><input type="text" name="inputTxt" id="fAno" min="0"></div>
 
                 <label for="masc">Masculino:
                 </label> <input name="radSex" type="radio" id="masc">             
